# UCFBrainStuff

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  QUADRUPLE_SEIZURES.htm  README.md  SEIZURES.htm  brainstuff2.py  smoothed_period.py  test1.py
AndroidStudioApplication/: ReadMe.txt
gimbalgen/: Cargo.toml
gimbalgen/src/: main.rs
gimbaltest/: out.hex  pwm_test.asm
libbrain/: CMakeLists.txt
libbrain/src/: libbrain.c  libbrain.h
old/: SEIZURES.htm
old/AndroidStudioApplication/: ReadMe.txt
old/libbrain/: CMakeLists.txt
old/old_py/: brainstuff.py  competitor.py  fft1.py  test.py
old_py/: better_eeg.py  convolv.py  fft2.py
research/: eeg.py
research/.ropeproject/: globalnames
seniordesign/: custom-parts.bak  custom-parts.bck  custom-parts.dcm  partslist  seniordesign.pro  sorted_partslist  tm4c123gh6pm.bak  tm4c123gh6pm.bck
seniordesign/custom_footprints.pretty/: 1571634-1.kicad_mod  BAT-HLD-001.kicad_mod  Coilcraft_XFL4020.kicad_mod  GlobalTop-FGPMMOPA6H.kicad_mod  RovingNetworks_RN-42.kicad_mod  SDA04H1BD.kicad_mod  SOT-363.kicad_mod  TSOT-23.kicad_mod
seniordesign/emokit/: CharsToJoystick.docx  SEIZURES.htm  autocorr.py  brainstuff.py  eeg_plot.py  gyro_plot.py
seniordesign/flasher/: flasher-B_Cu.gbr  flasher-B_Mask.gbr  flasher-B_SilkS.gbr  flasher-Edge_Cuts.gbr  flasher-F_Cu.gbr  flasher-F_Mask.gbr  flasher-F_SilkS.gbr  flasher-cache.lib  flasher-drl_map.gbr  flasher-rescue.lib  flasher.bak  flasher.cmp  flasher.drl  flasher.kicad_pcb  flasher.kicad_pcb-bak  flasher.net  (+3 more)
tivafpgacore/: tivafpgacore-cache.lib  tivafpgacore.pro
(+238 files in other folders)
